...
      Picker("Flight Type", selection: $flightType) {
        Text("VFR").tag(Rating.VFR)
          .accessibilityIdentifier("flightTypeVFR")
        Text("IFR").tag(Rating.IFR)
          .accessibilityIdentifier("flightTypeIFR")
      }
      .accessibilityIdentifier("flightTypePicker").onChange(of: flightType) {
        // These synchronous writes are coalesced into a single recompute by the
        // Observations sequence in Questionnaire.
        switch flightType {
          case .VFR:
            questionnaire.ifrLowCeiling = false
            questionnaire.ifrLowVisibility = false
...
