...
  private var riskTitle: some View {
    VStack {
      Text(displayedRisk.label.uppercased())
        .bold()
        .font(.title)
        .contentTransition(.interpolate)
        .accessibilityIdentifier("riskLevelText")
    }
  }

  var body: some View {
    VStack {
      Spacer()
...
